--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-speech-kit": "^3.0.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
