--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-speech-kit": "^3.0.1",
+    "socket.io-client": "^4.5.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
