--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-pokemon-game",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
